plugins/xpath/xpath-lang/testData/xpath2/parsing/invalidTypeOccurrenceIndicator2.xpath2
4 treat as item() *<error descr="Unexpected token"> </error>5<EOLError descr="Unexpected end of file"></EOLError>